fix(swagger): fix auth key
