# app/handlers/company.handler.go
@@ -43,6 +43,7 @@ func CompanyGetByIdHandler(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Security accessToken
+// @Security ApiKeyAuth
 // @Param companyLogo formData file true "Logo image"
 // @Success 204 "Company logo successful uploaded"
 // @Failure 400 {object} utility.Message "Invalid request, log in"
