# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   datastore.Admin:
     properties:
@@ -115,7 +116,7 @@ paths:
               $ref: '#/definitions/datastore.Card'
             type: array
       security:
-      - accessToken: []
+      - ApiKeyAuth: []
       tags:
       - Admin
   /auth/admin_login:
@@ -197,7 +198,7 @@ paths:
           schema:
             $ref: '#/definitions/utility.Message'
       security:
-      - accessToken: []
+      - ApiKeyAuth: []
       tags:
       - Auth
   /auth/createTag:
@@ -230,6 +231,8 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/utility.Message'
+      security:
+      - ApiKeyAuth: []
       tags:
       - Admin
   /auth/login:
@@ -346,6 +349,8 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/utility.Message'
+      security:
+      - ApiKeyAuth: []
       tags:
       - Admin
   /auth/token_update:
@@ -416,6 +421,8 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/utility.Message'
+      security:
+      - ApiKeyAuth: []
       tags:
       - Admin
   /card/create:
@@ -463,7 +470,7 @@ paths:
           schema:
             $ref: '#/definitions/utility.Message'
       security:
-      - accessToken: []
+      - ApiKeyAuth: []
       tags:
       - Card
   /card/delete:
@@ -503,7 +510,7 @@ paths:
           schema:
             $ref: '#/definitions/utility.Message'
       security:
-      - accessToken: []
+      - ApiKeyAuth: []
       tags:
       - Card
   /card/edit:
@@ -555,7 +562,7 @@ paths:
           schema:
             $ref: '#/definitions/utility.Message'
       security:
-      - accessToken: []
+      - ApiKeyAuth: []
       tags:
       - Card
   /card/getLogo:
@@ -689,7 +696,7 @@ paths:
           schema:
             $ref: '#/definitions/utility.Message'
       security:
-      - accessToken: []
+      - ApiKeyAuth: []
       tags:
       - Card
   /company/search/id:
@@ -750,6 +757,7 @@ paths:
             $ref: '#/definitions/utility.Message'
       security:
       - accessToken: []
+      - ApiKeyAuth: []
       tags:
       - Company
 securityDefinitions:
